--- a/tpms.Rmd
+++ b/tpms.Rmd
@@ -15,9 +15,13 @@ source("tpms.R")
 From http://opengarages.org/handbook/ebook/, TPMS data can be exploted in the following ways: 
 
 • Send an impossible condition to the engine control unit (ECU), causing a fault that could then be exploited
+
 • Trick the ECU into overcorrecting for spoofed road conditions
+
 • Put the TPMS receiver or the ECU into an unrecoverable state that might cause a driver to pull over to check for a reported flat or that might even shut down the vehicle
+
 • Track a vehicle based on the TPMS unique IDs
+
 • Spoof the TPMS signal to set off internal alarms 
 
 This project uses the code at https://github.com/jboone/gr-tpms to capture TPMS data. The author's talk, using an earlier version of the code, can be found here: http://www.youtube.com/watch?v=bKqiq2Y43Wg. Previous research on the topic can be found at https://web.wpi.edu/Pubs/E-project/Available/E-project-091115-154458/unrestricted/MQP_piscitelli_arnold_2015.pdf, and security vulnerabilities discussed in more depth at http://www.winlab.rutgers.edu/~gruteser/papers/xu_tpms10.pdf/.
@@ -25,8 +29,8 @@ This project uses the code at https://github.com/jboone/gr-tpms to capture TPMS 
 Distribution of tire IDs
 
 ```{r odyssey}
-odyssey <- analyzeOdyssey()
-table(odyssey$`tireID = substr(packet, 25, 56)`)
+odyssey <- analyzeOdyssey() %>% rename(sensorID=`tireID = substr(packet, 25, 56)`)
+table(odyssey$sensorID)
 ```
 
 First 3 bytes, statistical distribution
@@ -43,11 +47,11 @@ bytes <- lapply(seq.int(1,3), function(x) {
 ```
 
 ```{r}
-plotCountBy(odyssey, `tireID = substr(packet, 25, 56)`, bytes[[1]]) + ggtitle("Byte 1 Distribution By Tire ID")
+plotCountBy(odyssey, sensorID, bytes[[1]]) + ggtitle("Byte 1 Distribution By Sensor ID")
 ```
 
 ```{r}
-plotCountBy(odyssey,`tireID = substr(packet, 25, 56)`) + ggtitle("Tire Distribution By Trip") 
+plotCountBy(odyssey,sensorID) + ggtitle("Sensor Distribution By Trip") 
 ```
 
 ```{r}
@@ -56,17 +60,25 @@ plotCountBy(odyssey.all,preamble) + ggtitle("Preamble Distribution By Trip")
 ```
 
 ```{r}
-plotCountBy(odyssey,`tireID = substr(packet, 25, 56)`,bitrate) + ggtitle("Tire ID Distribution By Bitrate")
+plotCountBy(odyssey,sensorID,bitrate) + ggtitle("Sensor ID Distribution By Bitrate")
 ```
 
 ```{r}
-# Get 4 most commonly occuring tire IDs
-odyssey.mine <- odyssey %>% count(`tireID = substr(packet, 25, 56)`) %>% top_n(4, n)
-odyssey.mine <- filter(odyssey, `tireID = substr(packet, 25, 56)` %in% 
-                               odyssey.mine$`tireID = substr(packet, 25, 56)`)
-plotCountBy(odyssey.mine, `tireID = substr(packet, 25, 56)`) + ggtitle("Tire Distribution By Trip, Filtered")
+# Get 4 most commonly occuring sensor IDs
+odyssey.mine <- odyssey %>% count(sensorID) %>% top_n(4, n)
+odyssey.mine <- filter(odyssey, sensorID %in% 
+                               odyssey.mine$sensorID)
+plotCountBy(odyssey.mine, sensorID) + ggtitle("Sensor Distribution By Trip, Filtered")
 bytes.mine <- lapply(seq.int(1,3), function(x) {analyzePacket(odyssey.mine$packet,x*8-7,x*8)})
-plotCountBy(odyssey.mine, `tireID = substr(packet, 25, 56)`, bytes.mine[[1]]) + ggtitle("Byte 1 by Tire ID")
-plotCountBy(odyssey.mine, `tireID = substr(packet, 25, 56)`, bytes.mine[[2]]) + ggtitle("Byte 2 by Tire ID")
-plotCountBy(odyssey.mine, `tireID = substr(packet, 25, 56)`, bytes.mine[[3]]) + ggtitle("Byte 3 by Tire ID")
+
+odyssey.mine<-ungroup(odyssey.mine) %>% mutate(byte1=unbinary(bytes.mine[[1]]),
+                                               byte2=unbinary(bytes.mine[[2]]),
+                                               byte3=unbinary(bytes.mine[[3]])) %>% 
+        group_by(trip, sensorID)
+
+plotCountBy(odyssey.mine, sensorID, byte1) + ggtitle("Byte 1 by Sensor ID")
+plotCountBy(odyssey.mine, sensorID, byte2) + ggtitle("Byte 2 by Sensor ID")
+plotCountBy(odyssey.mine, sensorID, byte3) + ggtitle("Byte 3 by Sensor ID")
+
+#ggplot(odyssey.mine, aes(date, byte2)) + geom_line() + facet_grid(trip~sensorID)
 ```
