--- a/tpms.Rmd
+++ b/tpms.Rmd
@@ -80,11 +80,12 @@ plotCountBy(odyssey.mine, sensorID, byte1) + ggtitle("Byte 1 by Sensor ID")
 plotCountBy(odyssey.mine, sensorID, byte2) + ggtitle("Byte 2 by Sensor ID")
 plotCountBy(odyssey.mine, sensorID, byte3) + ggtitle("Byte 3 by Sensor ID")
 
-ggplot(odyssey.mine, aes(date, byte2)) + geom_point(aes(color=sensorID)) + 
+odyssey.mine <- mutate(odyssey.mine, date=ymd_hms(date))
+ggplot(odyssey.mine, aes(date, byte2)) + geom_point(aes(color=sensorID,alpha=.5)) + 
         facet_grid(.~trip, scales="free_x") + ggtitle("Byte2 by trip") +
-        theme(legend.position="bottom")
+        theme(legend.position="bottom", axis.text.x=element_text(angle=90, hjust=1))
 
-ggplot(odyssey.mine, aes(date, byte3)) + geom_point(aes(color=sensorID)) + 
+ggplot(odyssey.mine, aes(date, byte3)) + geom_point(aes(color=sensorID,alpha=.5)) + 
         facet_grid(.~trip, scales="free_x") + ggtitle("Byte3 by trip") + 
-        theme(legend.position="bottom")
+        theme(legend.position="bottom", axis.text.x=element_text(angle=90, hjust=1))
 ```
